# pcen

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/: pcen.py
tests/: test_pcen.py
